@@ -397,6 +397,8 @@ class EditPage {
 			$wgOut->includeJQuery();
 			$wgOut->addScriptFile( 'preview.js' );
 		}
+		// Bug #19334: textarea jumps when editing articles in IE8
+		$wgOut->addStyle( 'common/IE80Fixes.css', 'screen', 'IE 8' );
 
 		$permErrors = $this->getEditPermissionErrors();
 		if ( $permErrors ) {
